# file-prompt

./: CHANGELOG.md  Makefile  README.md  index.html  setup.cfg
examples/: frontend-barescript-tips.md  frontend-base.json  frontend-create.json  frontend-tips.md  frontend-update.json  frontend.json  port-js-to-py.json
src/ctxkit/: __init__.py  grok.py  main.py
src/file_prompt/: __main__.py  main.py
src/promptkit/: __main__.py  main.py
src/promptmaker/: __main__.py  main.py
src/tests/: test_main.py
