[metadata]
name = file-prompt
version = 0.9.0
url = https://github.com/craigahobbs/file-prompt
author = Craig A. Hobbs
author_email = craigahobbs@gmail.com
license = MIT
description = file-prompt
long_description = file:README.md
long_description_content_type = text/markdown
keywords = file-prompt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Utilities

[options]
packages = file_prompt
package_dir =
    = src

[options.entry_points]
console_scripts =
    file-prompt = file_prompt.main:main
